# finderAnywhere

./: .gitignore  README.en.md  README.md  README1.md  index.html  package-lock.json  package.json  readme.md  vite.config.js
.github/workflows/: build.yml
scripts/: copy-sidecar.js  update-build-info.js
src/: App.vue  build.ts  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/templates/: share_shell.html
src/components/: FileGrid.vue  FileTable.vue  FullscreenPreview.vue  OcserverDialog.vue  PreviewPanel.vue  Toolbar.vue
src/components/preview/: AudioPreview.vue  ImagePreview.vue  PdfPreview.vue  TextPreview.vue  VideoPreview.vue
src/composables/: useEventBus.js  useFormat.js  useIntersect.js  useTauri.js  useThumbLoader.js
src/service/: modelSettings.ts  opencode.ts  request.ts  test.ts
src/stores/: appStore.js
src/styles/: base.less  file-list.less  layout.less  main.less  preview.less  toolbar.less
