[package]
name = "finder-anywhere"
version = "0.1.0"
description = "Finder Anywhere"
authors = ["Finder Anywhere"]
edition = "2021"

[lib]
name = "finder_anywhere_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
dirs = "5.0"
mime_guess = "2.0"
natord = "1.0"
open = "5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
urlencoding = "2.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "tiff", "webp"] }
